
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.61)
AC_INIT(Open-Zwave-Lua, 0.1)
AC_CONFIG_AUX_DIR(autotools)
AC_CONFIG_SRCDIR([src/lua-zwave.cpp])
AC_CONFIG_HEADER([include/config.h])
AC_CONFIG_MACRO_DIR(autotools)
AC_CACHE_LOAD
AM_INIT_AUTOMAKE(silent-rules)
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE
#AC_MSG_HEADER([Configuring Core Now])

AC_LIBTOOL_DLOPEN
dnl AC_DISABLE_SHARED
dnl AC_LIBTOOL_WIN32_DLL
dnl AC_LIBLTDL_CONVENIENCE

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AX_PROG_LUA
AX_LUA_HEADERS
AX_LUA_LIBS

AC_LANG_PUSH(C++)
AC_CHECK_HEADER([luabind/luabind.hpp])
AC_CHECK_LIB(luabind, open, [LUABIND_LIB="-lluabind"])
AC_SUBST(LUABIND_LIB)
AC_CHECK_HEADER([openzwave/Manager.h])
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(udev, main, [UDEV_LIB="-ludev"])
AC_SUBST(UDEV_LIB)
AC_CHECK_LIB(tinyxml, main, [TXML_LIB="-ltinyxml"])
AC_SUBST(TXML_LIB)
AC_CHECK_LIB(openzwave, main, [OZW_LIB="-lopenzwave"], [], [$UDEV_LIB $TXML_LIB])
AC_SUBST(OZW_LIB)
CPPFLAGS="$CXXFLAGS -I/usr/include/openzwave/"
AC_CHECK_HEADER([Manager.h])

AC_LANG_POP(C++)

dnl check if we are running with Debug....
AC_MSG_CHECKING(Whether to Enable Debuging...)
AC_ARG_ENABLE(debug,
AC_HELP_STRING([--enable-debug], [Enable Debuging]),
[ case "$enableval" in
  yes)
	AC_DEFINE(DEBUG, 1, 'Enable Debugging')
	CXXFLAGS="$CXXFLAGS -ggdb -Wall -O0 -U_FORTIFY_SOURCE"
	AC_MSG_RESULT(yes - Watch your Log Files)
	;;
  *)
	CXXFLAGS="$CXXFLAGS -DNDEBUG"
	AC_MSG_RESULT(no)
	;;
  esac],
CFLAGS="$CFLAGS -DNDEBUG"
AC_MSG_RESULT(no)
)

AC_MSG_CHECKING([Options for GTEST Framework])
AC_ARG_WITH(gtestoptions, 
AC_HELP_STRING([--with-gtestoptions=<options>], [Options to pass to Gtest Framework via GTEST_OUTPUT]),
AS_IF([test "x$with_gtestoptions" != x],
	AC_SUBST([GTEST_OUTPUT], $with_gtestoptions),
	AC_SUBST([GTEST_OUTPUT], "")
)
)
AC_MSG_RESULT($with_gtestoptions)

if test "${ac_configure_args+set}" != "set" ; then
      ac_configure_args=
      for ac_arg in ${1+"[$]@"}; do
         ac_configure_args="$ac_configure_args '$ac_arg'"
      done
fi
AC_SUBST([CONFIGURE_ARGS], $ac_configure_args)

AC_CONFIG_FILES(Makefile include/Makefile src/Makefile test/Makefile examples/Makefile) 
AC_CACHE_SAVE
AC_OUTPUT
